data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1749.wast
;; 10. **Test Description: Multiple Conditional Loops with Dynamic Control Flow Paths**    - Design multiple conditional loops where `br_if` results in complex dynamic control flows, potentially leading to stack polymorphism violations if improperly managed.    - **Constraint Check**: Validate stack polymorphism handling across varied control flow executions.    - **CFG Relevance**: Ensures CFG accurately manages dynamic and polymorphic stack states.

(assert_invalid
  (module
    (func $multiple-conditional-loops
      (block (loop
          (br_if 1 (i32.const 0))
          (br_if 1 (i32.const 1)) 
        )))
  )
  "type mismatch"
)